update: almost done with VG task, need to eliminate redundancies from lack of lemmatization

--- a/mturk/sandbox/prompt_imgs.html
+++ b/mturk/sandbox/prompt_imgs.html
@@ -23,33 +23,48 @@
                 <br />
 
                 <div>
-                    <h4>Now consider a new WHOLE. If I told you that the WHOLE is ADJECTIVE, which of the following is true?</h4>
-                    <input type="radio" name="response" value="guaranteed"><label>The PART must also be ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="probably"><label>The PART is probably ADJECTIVE but might not be</label><br />
-                    <input type="radio" name="response" value="unrelated"><label>The PART might be ADJECTIVE, but this has nothing to do with whether WHOLE is ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="impossible"><label>The PART cannot be ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="wjj-nonsense"/><label>I don't know what it means for a WHOLE to be ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="pjj-nonsense"/><label>I don't know what it means for a PART to be ADJECTIVE</label><br />
+                    <h4>Now consider a different WHOLE, not pictured. If the WHOLE is ADJECTIVE, which of the following is true?</h4>
+                    <input type="radio" name="response1" value="guaranteed" required><label>The PART must also be ADJECTIVE</label><br />
+                    <input type="radio" name="response1" value="probably" required><label>The PART is probably ADJECTIVE, but might not be</label><br />
+                    <input type="radio" name="response1" value="unrelated" required><label>The PART might be ADJECTIVE, but this has nothing to do with whether the WHOLE is ADJECTIVE</label><br />
+                    <input type="radio" name="response1" value="unlikely" required><label>The PART is unlikely to be ADJECTIVE, but might be</label><br />
+                    <input type="radio" name="response1" value="impossible" required><label>The PART cannot be ADJECTIVE</label><br />
+                    <input type="radio" name="response1" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
+                    <hr></hr>
+                    <input type="checkbox" name="wjj-nonsense1" value="wjj-nonsense"/><label>I don't know what it means for a WHOLE to be ADJECTIVE</label>
+                    <input type="checkbox" name="word-nonsense1" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense1" value="pjj-nonsense"/><label>I don't know what it means for a PART to be ADJECTIVE</label>
+                    <input type="checkbox" name="pw-nonsense1" value="pw-nonsense"/><label>I don't know what it means for a WHOLE to have a PART</label><br />
                 </div>
                 <br />
                 <div>
-                    <h4>Now consider a new WHOLE. If I told you that the WHOLE is ADJECTIVE, which of the following is true?</h4>
-                    <input type="radio" name="response" value="guaranteed"><label>The PART must also be ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="probably"><label>The PART is probably ADJECTIVE but might not be</label><br />
-                    <input type="radio" name="response" value="unrelated"><label>The PART might be ADJECTIVE, but this has nothing to do with whether WHOLE is ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="impossible"><label>The PART cannot be ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="wjj-nonsense"/><label>I don't know what it means for a WHOLE to be ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="pjj-nonsense"/><label>I don't know what it means for a PART to be ADJECTIVE</label><br />
+                    <h4>Now consider a new WHOLE. If the WHOLE is ADJECTIVE, which of the following is true?</h4>
+                    <input type="radio" name="response2" value="guaranteed" required><label>The PART must also be ADJECTIVE</label><br />
+                    <input type="radio" name="response2" value="probably" required><label>The PART is probably ADJECTIVE, but might not be</label><br />
+                    <input type="radio" name="response2" value="unrelated" required><label>The PART might be ADJECTIVE, but this has nothing to do with whether the WHOLE is ADJECTIVE</label><br />
+                    <input type="radio" name="response2" value="unlikely" required><label>The PART is unlikely to be ADJECTIVE, but might be</label><br />
+                    <input type="radio" name="response2" value="impossible" required><label>The PART cannot be ADJECTIVE</label><br />
+                    <input type="radio" name="response2" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
+                    <hr></hr>
+                    <input type="checkbox" name="wjj-nonsense2" value="wjj-nonsense"/><label>I don't know what it means for a WHOLE to be ADJECTIVE</label>
+                    <input type="checkbox" name="word-nonsense2" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense2" value="pjj-nonsense"/><label>I don't know what it means for a PART to be ADJECTIVE</label>
+                    <input type="checkbox" name="pw-nonsense2" value="pw-nonsense"/><label>I don't know what it means for a WHOLE to have a PART</label><br />
                 </div>
                 <br />
                 <div>
-                    <h4>Now consider a new WHOLE. If I told you that the WHOLE is ADJECTIVE, which of the following is true?</h4>
-                    <input type="radio" name="response" value="guaranteed"><label>The PART must also be ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="probably"><label>The PART is probably ADJECTIVE but might not be</label><br />
-                    <input type="radio" name="response" value="unrelated"><label>The PART might be ADJECTIVE, but this has nothing to do with whether WHOLE is ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="impossible"><label>The PART cannot be ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="wjj-nonsense"/><label>I don't know what it means for a WHOLE to be ADJECTIVE</label><br />
-                    <input type="radio" name="response" value="pjj-nonsense"/><label>I don't know what it means for a PART to be ADJECTIVE</label><br />
+                    <h4>Now consider a new WHOLE. If the WHOLE is ADJECTIVE, which of the following is true?</h4>
+                    <input type="radio" name="response3" value="guaranteed" required><label>The PART must also be ADJECTIVE</label><br />
+                    <input type="radio" name="response3" value="probably" required><label>The PART is probably ADJECTIVE, but might not be</label><br />
+                    <input type="radio" name="response3" value="unrelated" required><label>The PART might be ADJECTIVE, but this has nothing to do with whether the WHOLE is ADJECTIVE</label><br />
+                    <input type="radio" name="response3" value="unlikely" required><label>The PART is unlikely to be ADJECTIVE, but might be</label><br />
+                    <input type="radio" name="response3" value="impossible" required><label>The PART cannot be ADJECTIVE</label><br />
+                    <input type="radio" name="response3" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
+                    <hr></hr>
+                    <input type="checkbox" name="wjj-nonsense3" value="wjj-nonsense"/><label>I don't know what it means for a WHOLE to be ADJECTIVE</label>
+                    <input type="checkbox" name="word-nonsense3" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
+                    <input type="checkbox" name="pjj-nonsense3" value="pjj-nonsense"/><label>I don't know what it means for a PART to be ADJECTIVE</label>
+                    <input type="checkbox" name="pw-nonsense3" value="pw-nonsense"/><label>I don't know what it means for a WHOLE to have a PART</label><br />
                 </div>
                 <p><input type='submit' id='submitButton' value='Submit' /></p></form> 
 
@@ -57,4 +72,3 @@
 
         </body>
     </html>
-
