--- a/mturk/sandbox/prompt_qualifier.html
+++ b/mturk/sandbox/prompt_qualifier.html
@@ -5,15 +5,29 @@
             <script type='text/javascript' src='https://s3.amazonaws.com/mturk-public/externalHIT_v1.js'></script>
             <style>
             div {
-                background-color: powderblue;
+                background-color: #e0e0e0;
                 margin-bottom: 20px;
                 display: inline-block;
+            }
+            label {
+                font-size: 12px;
+                vertical-align: middle;
+            }
+            input {
+                vertical-align: middle;
+            }
+            h4 {
+                margin-bottom: 4px
             }
             </style>
         </head>
         <body> 
             <form name='mturk_form' method='post' id='mturk_form' action='https://www.mturk.com/mturk/externalSubmit'><input type='hidden' value='' name='assignmentId' id='assignmentId'/>
 
+                <div>
+                    <h2>Commonsense visual reasoning qualifer task</h2>
+                    <p>The purpose of this task is to answer common-sense questions about nouns and adjectives. We have annotated the examples below, and will compare your answers to ours to determine qualification for the full study.</p>
+                </div>
                 <div>
                     <h4>Each of the pictures below has a leg, outlined with a blue box. Notice that each leg also has a knee. The knee is outlined with a red box.</h4>
                     <img src="https://s3-us-west-1.amazonaws.com/commonsense-mturk-images/leg_knee/2415067.png" width="360px"/>
