--- a/mturk/sandbox/prompt_qualifier.html
+++ b/mturk/sandbox/prompt_qualifier.html
@@ -39,7 +39,7 @@
                     <h4>Now consider any leg, not the particular ones pictured. If the leg is bent, which of the following is true?</h4>
                     <input type="radio" name="response_leg_knee_bent" value="guaranteed" required><label>The knee must also be bent</label><br />
                     <input type="radio" name="response_leg_knee_bent" value="probably" required><label>The knee is probably bent, but might not be</label><br />
-                    <input type="radio" name="response_leg_knee_bent" value="unrelated" required><label>The knee might be bent, but this has nothing to do with whether the leg is bent</label><br />
+                    <input type="radio" name="response_leg_knee_bent" value="unrelated" required><label>The knee might be bent, but this is unrelated to the leg being bent</label><br />
                     <input type="radio" name="response_leg_knee_bent" value="unlikely" required><label>The knee is unlikely to be bent, but might be</label><br />
                     <input type="radio" name="response_leg_knee_bent" value="impossible" required><label>The knee cannot be bent</label><br />
                     <input type="radio" name="response_leg_knee_bent" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
@@ -61,7 +61,7 @@
                     <h4>Now consider any boat, not the particular ones pictured. If the boat is open, which of the following is true?</h4>
                     <input type="radio" name="response_boat_top_open" value="guaranteed" required><label>The top must also be open</label><br />
                     <input type="radio" name="response_boat_top_open" value="probably" required><label>The top is probably open, but might not be</label><br />
-                    <input type="radio" name="response_boat_top_open" value="unrelated" required><label>The top might be open, but this has nothing to do with whether the boat is open</label><br />
+                    <input type="radio" name="response_boat_top_open" value="unrelated" required><label>The top might be open, but this is unrelated to the boat being open</label><br />
                     <input type="radio" name="response_boat_top_open" value="unlikely" required><label>The top is unlikely to be open, but might be</label><br />
                     <input type="radio" name="response_boat_top_open" value="impossible" required><label>The top cannot be open</label><br />
                     <input type="radio" name="response_boat_top_open" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
@@ -83,7 +83,7 @@
                     <h4>Now consider any woman, not the particular ones pictured. If the woman is beautiful, which of the following is true?</h4>
                     <input type="radio" name="response_woman_shoulder_beautiful" value="guaranteed" required><label>The shoulder must also be beautiful</label><br />
                     <input type="radio" name="response_woman_shoulder_beautiful" value="probably" required><label>The shoulder is probably beautiful, but might not be</label><br />
-                    <input type="radio" name="response_woman_shoulder_beautiful" value="unrelated" required><label>The shoulder might be beautiful, but this has nothing to do with whether the woman is beautiful</label><br />
+                    <input type="radio" name="response_woman_shoulder_beautiful" value="unrelated" required><label>The shoulder might be beautiful, but this is unrelated to the woman being beautiful</label><br />
                     <input type="radio" name="response_woman_shoulder_beautiful" value="unlikely" required><label>The shoulder is unlikely to be beautiful, but might be</label><br />
                     <input type="radio" name="response_woman_shoulder_beautiful" value="impossible" required><label>The shoulder cannot be beautiful</label><br />
                     <input type="radio" name="response_woman_shoulder_beautiful" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
@@ -105,7 +105,7 @@
                     <h4>Now consider any jacket, not the particular ones pictured. If the jacket is brown, which of the following is true?</h4>
                     <input type="radio" name="response_jacket_collar_brown" value="guaranteed" required><label>The collar must also be brown</label><br />
                     <input type="radio" name="response_jacket_collar_brown" value="probably" required><label>The collar is probably brown, but might not be</label><br />
-                    <input type="radio" name="response_jacket_collar_brown" value="unrelated" required><label>The collar might be brown, but this has nothing to do with whether the jacket is brown</label><br />
+                    <input type="radio" name="response_jacket_collar_brown" value="unrelated" required><label>The collar might be brown, but this is unrelated to the jacket being brown</label><br />
                     <input type="radio" name="response_jacket_collar_brown" value="unlikely" required><label>The collar is unlikely to be brown, but might be</label><br />
                     <input type="radio" name="response_jacket_collar_brown" value="impossible" required><label>The collar cannot be brown</label><br />
                     <input type="radio" name="response_jacket_collar_brown" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
@@ -127,7 +127,7 @@
                     <h4>Now consider any woman, not the particular ones pictured. If the woman is beautiful, which of the following is true?</h4>
                     <input type="radio" name="response_woman_chain_beautiful" value="guaranteed" required><label>The chain must also be beautiful</label><br />
                     <input type="radio" name="response_woman_chain_beautiful" value="probably" required><label>The chain is probably beautiful, but might not be</label><br />
-                    <input type="radio" name="response_woman_chain_beautiful" value="unrelated" required><label>The chain might be beautiful, but this has nothing to do with whether the woman is beautiful</label><br />
+                    <input type="radio" name="response_woman_chain_beautiful" value="unrelated" required><label>The chain might be beautiful, but this is unrelated to the woman being beautiful</label><br />
                     <input type="radio" name="response_woman_chain_beautiful" value="unlikely" required><label>The chain is unlikely to be beautiful, but might be</label><br />
                     <input type="radio" name="response_woman_chain_beautiful" value="impossible" required><label>The chain cannot be beautiful</label><br />
                     <input type="radio" name="response_woman_chain_beautiful" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
@@ -149,7 +149,7 @@
                     <h4>Now consider any boat, not the particular ones pictured. If the boat is long, which of the following is true?</h4>
                     <input type="radio" name="response_boat_letter_long" value="guaranteed" required><label>The letter must also be long</label><br />
                     <input type="radio" name="response_boat_letter_long" value="probably" required><label>The letter is probably long, but might not be</label><br />
-                    <input type="radio" name="response_boat_letter_long" value="unrelated" required><label>The letter might be long, but this has nothing to do with whether the boat is long</label><br />
+                    <input type="radio" name="response_boat_letter_long" value="unrelated" required><label>The letter might be long, but this is unrelated to the boat being long</label><br />
                     <input type="radio" name="response_boat_letter_long" value="unlikely" required><label>The letter is unlikely to be long, but might be</label><br />
                     <input type="radio" name="response_boat_letter_long" value="impossible" required><label>The letter cannot be long</label><br />
                     <input type="radio" name="response_boat_letter_long" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
@@ -163,7 +163,7 @@
                     <h4>Now consider any boat, not the particular ones pictured. If the boat is wooden, which of the following is true?</h4>
                     <input type="radio" name="response_boat_letter_wooden" value="guaranteed" required><label>The letter must also be wooden</label><br />
                     <input type="radio" name="response_boat_letter_wooden" value="probably" required><label>The letter is probably wooden, but might not be</label><br />
-                    <input type="radio" name="response_boat_letter_wooden" value="unrelated" required><label>The letter might be wooden, but this has nothing to do with whether the boat is wooden</label><br />
+                    <input type="radio" name="response_boat_letter_wooden" value="unrelated" required><label>The letter might be wooden, but this is unrelated to the boat being wooden</label><br />
                     <input type="radio" name="response_boat_letter_wooden" value="unlikely" required><label>The letter is unlikely to be wooden, but might be</label><br />
                     <input type="radio" name="response_boat_letter_wooden" value="impossible" required><label>The letter cannot be wooden</label><br />
                     <input type="radio" name="response_boat_letter_wooden" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
@@ -185,7 +185,7 @@
                     <h4>Now consider any bed, not the particular ones pictured. If the bed is wooden, which of the following is true?</h4>
                     <input type="radio" name="response_bed_pillow_wooden" value="guaranteed" required><label>The pillow must also be wooden</label><br />
                     <input type="radio" name="response_bed_pillow_wooden" value="probably" required><label>The pillow is probably wooden, but might not be</label><br />
-                    <input type="radio" name="response_bed_pillow_wooden" value="unrelated" required><label>The pillow might be wooden, but this has nothing to do with whether the bed is wooden</label><br />
+                    <input type="radio" name="response_bed_pillow_wooden" value="unrelated" required><label>The pillow might be wooden, but this is unrelated to the bed being wooden</label><br />
                     <input type="radio" name="response_bed_pillow_wooden" value="unlikely" required><label>The pillow is unlikely to be wooden, but might be</label><br />
                     <input type="radio" name="response_bed_pillow_wooden" value="impossible" required><label>The pillow cannot be wooden</label><br />
                     <input type="radio" name="response_bed_pillow_wooden" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
@@ -207,7 +207,7 @@
                     <h4>Now consider any road, not the particular ones pictured. If the road is open, which of the following is true?</h4>
                     <input type="radio" name="response_road_dirt_open" value="guaranteed" required><label>The dirt must also be open</label><br />
                     <input type="radio" name="response_road_dirt_open" value="probably" required><label>The dirt is probably open, but might not be</label><br />
-                    <input type="radio" name="response_road_dirt_open" value="unrelated" required><label>The dirt might be open, but this has nothing to do with whether the road is open</label><br />
+                    <input type="radio" name="response_road_dirt_open" value="unrelated" required><label>The dirt might be open, but this is unrelated to the road being open</label><br />
                     <input type="radio" name="response_road_dirt_open" value="unlikely" required><label>The dirt is unlikely to be open, but might be</label><br />
                     <input type="radio" name="response_road_dirt_open" value="impossible" required><label>The dirt cannot be open</label><br />
                     <input type="radio" name="response_road_dirt_open" value="nonsense" required><label>I don't know (check one of the boxes below)</label><br />
