fix/prettify the layout a bit

--- a/mturk/sandbox/prompt_imgs.html
+++ b/mturk/sandbox/prompt_imgs.html
@@ -6,15 +6,15 @@
             <style>
             div {
                 background-color: #e0e0e0;
-                margin-bottom: 10px;
+                margin-bottom: 5px;
                 display: block;
-                    padding:2px;
+                    padding:5px;
             }
             div.instructions {
                 display: block;
             }
             label {
-                font-size: 12px;
+                font-size: 14px;
                 vertical-align: middle;
             }
             input {
@@ -22,6 +22,9 @@
             }
             h4 {
                 margin-bottom: 4px
+            }
+            h2 {
+                margin-bottom: 0px
             }
             span {
                 font-weight: bold;
@@ -62,9 +65,8 @@
                     <img src="imgs/building_arches/2388965.png" width="360px"/>
                     <img src="imgs/building_arches/2398920.png" width="360px"/>
                 </div>
-                <br />
 
-                <div>
+                <div class="question">
                     <p>Now consider any <span class="whole">WHOLE</span>, not the particular ones pictured. If the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, which of the following is true?</p>
                     <input type="radio" name="response1" value="guaranteed" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> must also be <span class="jj">ADJECTIVE</span></label><br />
                     <input type="radio" name="response1" value="probably" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> is probably <span class="jj">ADJECTIVE</span></label><br />
@@ -77,8 +79,7 @@
                     <input type="checkbox" name="word-nonsense1" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
                     <input type="checkbox" name="pw-nonsense1" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
-                <br />
-                <div>
+                <div class="question">
                     <p>Now consider any <span class="whole">WHOLE</span>, not the particular ones pictured. If the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, which of the following is true?</p>
                     <input type="radio" name="response2" value="guaranteed" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> must also be <span class="jj">ADJECTIVE</span></label><br />
                     <input type="radio" name="response2" value="probably" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> is probably <span class="jj">ADJECTIVE</span></label><br />
@@ -91,8 +92,7 @@
                     <input type="checkbox" name="word-nonsense2" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
                     <input type="checkbox" name="pw-nonsense2" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
-                <br />
-                <!--<div>
+                <div class="question">
                     <p>Now consider any <span class="whole">WHOLE</span>, not the particular ones pictured. If the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, which of the following is true?</p>
                     <input type="radio" name="response3" value="guaranteed" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> must also be <span class="jj">ADJECTIVE</span></label><br />
                     <input type="radio" name="response3" value="probably" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> is probably <span class="jj">ADJECTIVE</span></label><br />
@@ -105,8 +105,7 @@
                     <input type="checkbox" name="word-nonsense3" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
                     <input type="checkbox" name="pw-nonsense3" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
-                <br />
-                <div>
+                <div class="question">
                     <p>Now consider any <span class="whole">WHOLE</span>, not the particular ones pictured. If the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, which of the following is true?</p>
                     <input type="radio" name="response4" value="guaranteed" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> must also be <span class="jj">ADJECTIVE</span></label><br />
                     <input type="radio" name="response4" value="probably" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> is probably <span class="jj">ADJECTIVE</span></label><br />
@@ -119,8 +118,7 @@
                     <input type="checkbox" name="word-nonsense4" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
                     <input type="checkbox" name="pw-nonsense4" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
-                <br />
-                <div>
+                <div class="question">
                     <p>Now consider any <span class="whole">WHOLE</span>, not the particular ones pictured. If the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, which of the following is true?</p>
                     <input type="radio" name="response5" value="guaranteed" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> must also be <span class="jj">ADJECTIVE</span></label><br />
                     <input type="radio" name="response5" value="probably" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> is probably <span class="jj">ADJECTIVE</span></label><br />
@@ -133,8 +131,7 @@
                     <input type="checkbox" name="word-nonsense5" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
                     <input type="checkbox" name="pw-nonsense5" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
-                <br />
-                <div>
+                <div class="question">
                     <p>Now consider any <span class="whole">WHOLE</span>, not the particular ones pictured. If the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, which of the following is true?</p>
                     <input type="radio" name="response6" value="guaranteed" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> must also be <span class="jj">ADJECTIVE</span></label><br />
                     <input type="radio" name="response6" value="probably" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> is probably <span class="jj">ADJECTIVE</span></label><br />
@@ -147,8 +144,7 @@
                     <input type="checkbox" name="word-nonsense6" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
                     <input type="checkbox" name="pw-nonsense6" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
-                <br />
-                <div>
+                <div class="question">
                     <p>Now consider any <span class="whole">WHOLE</span>, not the particular ones pictured. If the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, which of the following is true?</p>
                     <input type="radio" name="response7" value="guaranteed" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> must also be <span class="jj">ADJECTIVE</span></label><br />
                     <input type="radio" name="response7" value="probably" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> is probably <span class="jj">ADJECTIVE</span></label><br />
@@ -161,8 +157,7 @@
                     <input type="checkbox" name="word-nonsense7" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
                     <input type="checkbox" name="pw-nonsense7" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
-                <br />
-                <div>
+                <div class="question">
                     <p>Now consider any <span class="whole">WHOLE</span>, not the particular ones pictured. If the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, which of the following is true?</p>
                     <input type="radio" name="response8" value="guaranteed" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> must also be <span class="jj">ADJECTIVE</span></label><br />
                     <input type="radio" name="response8" value="probably" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> is probably <span class="jj">ADJECTIVE</span></label><br />
@@ -175,8 +170,7 @@
                     <input type="checkbox" name="word-nonsense8" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
                     <input type="checkbox" name="pw-nonsense8" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
-                <br />
-                <div>
+                <div class="question">
                     <p>Now consider any <span class="whole">WHOLE</span>, not the particular ones pictured. If the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, which of the following is true?</p>
                     <input type="radio" name="response9" value="guaranteed" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> must also be <span class="jj">ADJECTIVE</span></label><br />
                     <input type="radio" name="response9" value="probably" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> is probably <span class="jj">ADJECTIVE</span></label><br />
@@ -189,8 +183,7 @@
                     <input type="checkbox" name="word-nonsense9" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
                     <input type="checkbox" name="pw-nonsense9" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
                 </div>
-                <br />
-                <div>
+                <div class="question">
                     <p>Now consider any <span class="whole">WHOLE</span>, not the particular ones pictured. If the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, which of the following is true?</p>
                     <input type="radio" name="response10" value="guaranteed" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> must also be <span class="jj">ADJECTIVE</span></label><br />
                     <input type="radio" name="response10" value="probably" required><label>Because the <span class="whole">WHOLE</span> is <span class="jj">ADJECTIVE</span>, the <span class="part">PART</span> is probably <span class="jj">ADJECTIVE</span></label><br />
@@ -202,7 +195,7 @@
                     <input type="checkbox" name="wjj-nonsense10" value="wjj-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to be <span class="jj">ADJECTIVE</span></label>
                     <input type="checkbox" name="word-nonsense10" value="word-nonsense"/><label>I don't know what one of these words means</label><br />
                     <input type="checkbox" name="pw-nonsense10" value="pw-nonsense"/><label>I don't know what it means for a <span class="whole">WHOLE</span> to have a <span class="part">PART</span></label><br />
-                </div>-->
+                </div>
                 <p lang="en-US" style="color: rgb(34, 34, 34)"><b>(Optional)</b> Please provide any comments that you have about this HIT. Thanks for doing our HIT! We appreciate your input!</p>
 
                 <p><textarea cols="80" name="comment" rows="4"></textarea></p>
@@ -215,14 +208,16 @@
                 for (i = 0; i < coll.length; i++) {
                     coll[i].addEventListener("click", function() {
                         this.classList.toggle("active");
-                        console.log("okay");
-                        console.log(this);
                         var content = this.previousElementSibling;
-                        console.log(content);
                         if (content.style.display !== "none") {
                             content.style.display = "none";
                         } else {
                             content.style.display = "block";
+                        }
+                        if (this.innerText === 'Collapse instructions') {
+                            this.innerText = 'Show instructions';
+                        } else {
+                            this.innerText = 'Collapse instructions';
                         }
                     });
                 }
